# sample_protobuf_parser

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  protobuf_ast.cpp  protobuf_ast.hpp  protobuf_parser.hpp  protobuf_parser__original.hpp  sample1.proto
